--- a/Romanian/main/YellowPage.apk/res/values-ro/strings.xml
+++ b/Romanian/main/YellowPage.apk/res/values-ro/strings.xml
@@ -1,8 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-    <string name="about_fraud_num_online_identification">Despre identificarea online a atacurilor de tip phishing</string>
-    <string name="about_phone_event">Despre mesajele de serviciu</string>
-    <string name="about_smart_antispam_summary">Despre identificarea numerelor necunoscute</string>
     <string name="about_fraud_num_online_identification">Despre această caracteristică</string>
     <string name="about_phone_event">Despre mesajele de serviciu</string>
     <string name="about_smart_antispam_summary">Despre această caracteristică</string>
@@ -49,7 +46,7 @@
     <string name="confirm_to_add_blacklist">Blocați acest număr?</string>
     <string name="confirm_to_remove_blacklist">Deblocați acest număr?</string>
     <string name="confirm_to_send_to_desktop">Plasați %s pe ecranul principal?</string>
-  <string name="contact_detail_calllog_call_note_tips">Call notes</string>
+    <string name="contact_detail_calllog_call_note_tips">Notițe apeluri</string>
     <string name="contact_detail_calllog_call_record_tips">Apeluri înregistrate</string>
     <string name="content_desc_send_sms">Trimiteți SMS</string>
     <string name="coupon_bought_count">%d cumpărate</string>
@@ -123,204 +120,6 @@
     <string name="express_inquiry_history_remark">Comentarii</string>
     <string name="express_inquiry_history_remark_hint">Istoricul comentariilor</string>
     <string name="express_inquiry_internal_failure">"A apărut o eroare.
-=======
-  <string name="contact_detail_calllog_call_note_tips">Note apeluri</string>
-    <string name="contact_detail_calllog_call_record_tips">Apeluri înregistrate</string>
-    <string name="content_desc_send_sms">Trimiteți SMS</string>
-    <string name="coupon_bought_count">%d cumpărate</string>
-    <string name="currency_character">RMB</string>
-    <string name="custom_mark_category">Personalizat</string>
-    <string name="data_error">A apărut o eroare</string>
-    <string name="data_error_show">A apărut o eroare</string>
-    <string name="delete">Ștergeți</string>
-    <string name="didi_back">Înapoi</string>
-    <string name="didi_close">Închideți</string>
-    <string name="do_not_remind_me">"Nu arăta din nou"</string>
-    <string name="dont_enable">Dezactivați</string>
-    <string name="download_completed">Descărcare salvată în %s</string>
-    <string name="download_failed">Descărcarea a eșuat</string>
-    <string name="download_failed_blocked">"Nu se poate conecta la rețea"</string>
-    <string name="download_failed_cannot_resume">"Nu se poate descărca"</string>
-    <string name="download_failed_file_exists">Fișierul există deja</string>
-    <string name="download_failed_gone">"Fișierul nu a fost găsit"</string>
-    <string name="download_failed_network">"Nu se poate conecta la rețea"</string>
-    <string name="download_failed_server">Descărcarea a eșuat</string>
-    <string name="download_failed_space">Spațiu insuficient</string>
-    <string name="download_failed_storage">Descărcarea a eșuat. Verificați cardul SD.</string>
-    <string name="downloading">Se descarcă…</string>
-    <string name="enable_now">Activați</string>
-    <string name="exapress_save_address_to_contact">Salvați această adresă în Contacte</string>
-    <string name="express_add_new_address">Adăugați adresa</string>
-    <string name="express_address_delete_warning">Eliminați această adresă?</string>
-    <string name="express_address_deleted">Adresă ștearsă</string>
-    <string name="express_address_info">Informații despre adresă</string>
-    <string name="express_address_name">Nume</string>
-    <string name="express_address_region">Regiune</string>
-    <string name="express_address_warning_no_area">Regiunea trebuie selectată</string>
-    <string name="express_address_warning_no_full_address">Adresa este necesară</string>
-    <string name="express_address_warning_no_name">Numele trebuie completat</string>
-    <string name="express_address_warning_no_phone">Numărul de telefon este necesar</string>
-    <string name="express_addressee_info">Informații adresă</string>
-    <string name="express_addressee_name">Numele adresei</string>
-    <string name="express_addressee_region">"Regiunea pentru adresă"</string>
-    <string name="express_banner_header">%1$s / Număr de urmărire</string>
-    <string name="express_cancel_order">Renunțați</string>
-    <string name="express_company_list_empty">Nicio companie</string>
-    <string name="express_company_phone_prefix">"Contact: "</string>
-    <string name="express_company_pricing_details">Detalii despre preț</string>
-    <string name="express_contact_address">Introduceți adresa</string>
-    <string name="express_contact_address_finding">Se localizează…</string>
-    <string name="express_contact_label">Informații pentru  for serviciul de ridicare colet</string>
-    <string name="express_contact_phone">Introduceți numărul de telefon</string>
-    <string name="express_contact_phone_finding">Se obține numărul de telefon…</string>
-    <string name="express_contact_prefix">"Contact "</string>
-    <string name="express_copied">Numărul de urmărire este copiat</string>
-    <string name="express_copy_number">Copiere</string>
-    <string name="express_delete_order">Ștergere</string>
-    <string name="express_dest_city_label">Destinație</string>
-    <string name="express_detailed_address">Adresă</string>
-    <string name="express_field_empty">Gol</string>
-    <string name="express_go_back">Înapoi</string>
-    <string name="express_info_divider">" / "</string>
-    <string name="express_inqiury_select_logistics">Serviciu de curierat</string>
-    <string name="express_inquiry">Urmărire</string>
-    <string name="express_inquiry_and_send">Urmărire și trimitere</string>
-    <string name="express_inquiry_button_text">Urmărește</string>
-    <string name="express_inquiry_clipboard_number_message">Urmăriți numărul copiat?</string>
-    <string name="express_inquiry_data_owner_prefix">"Serviciu de urmărire furnizat de "</string>
-    <string name="express_inquiry_data_owner_suffix"/>
-    <string name="express_inquiry_delete_warning_multiple">Ștergeți %d intrări?</string>
-    <string name="express_inquiry_delete_warning_single">Ștergeți această înregistrare?</string>
-    <string name="express_inquiry_delivered">Expediat</string>
-    <string name="express_inquiry_detail">Detalii livrare express</string>
-    <string name="express_inquiry_edit_logistics">Curier</string>
-    <string name="express_inquiry_history">Istoric</string>
-    <string name="express_inquiry_history_remark">Comentarii</string>
-    <string name="express_inquiry_history_remark_hint">Istoricul comentariilor</string>
-    <string name="express_inquiry_internal_failure">"A apărut o eroare.
-=======
-  <string name="about_fraud_num_online_identification">Despre identificarea online a atacurilor de tip phishing</string>
-  <string name="about_phone_event">Despre mesajele de serviciu</string>
-  <string name="about_smart_antispam_summary">Despre identificarea numerelor necunoscute</string>
-  <string name="about_telephone_fraud">Fiți atenți la fraude</string>
-  <string name="account_address">Adrese</string>
-  <string name="account_order">Istoric comenzi</string>
-  <string name="account_title">Profil</string>
-  <string name="account_type_name">Cont Mi</string>
-  <string name="account_updating_device">Actualizare…</string>
-  <string name="account_updating_device_failed">"Nu s-a putut conecta"</string>
-  <string name="account_verify_password">"Utilizați deja acest serviciu pe alt dispozitiv. Din motive de securitate, trebuie să vă verificați contul Mi pe acest telefon."</string>
-  <string name="account_yellowpage_favorite">Favorite</string>
-  <string name="account_yellowpage_followed">Conturi verificate</string>
-  <string name="account_yellowpage_recent">Vizualizați istoricul</string>
-  <string name="add_to_desktop">Adăugați pe ecranul principal</string>
-  <string name="agree">De acord</string>
-  <string name="agree_to_continue">Continuați</string>
-  <string name="agree_to_turn_on">De acord</string>
-  <string name="all_services">Toate serviciile</string>
-  <string name="allow">Permiteți</string>
-  <string name="app_label">Pagini aurii</string>
-  <string name="app_recommendation_install">Instalați</string>
-  <string name="average_price">În medie %d RMB</string>
-  <string name="back">Înapoi</string>
-  <string name="balance_inquiry_send_sms_fail_hint">"Nu s-a putut obține soldul"</string>
-  <string name="balance_inquiry_send_sms_hint">Un SMS va fi trimis către operatorul dumneavoastră pentru verificarea soldului.</string>
-  <string name="balance_inquiry_send_sms_summmary">Verificați soldul</string>
-  <string name="balance_inquiry_title">Solicitare sold</string>
-  <string name="call">Apel</string>
-  <string name="callNoAnswerTimeFormat">A sunat de %s ori</string>
-  <string name="callrecordview_item_newcontact">Contact nou</string>
-  <string name="callrecordview_item_op_time_minutes_seconds">%1$d min și %2$d sec</string>
-  <string name="callrecordview_item_op_time_missed">Neconectat</string>
-  <string name="callrecordview_item_op_time_only_minutes">%d min</string>
-  <string name="callrecordview_item_op_time_only_seconds">%d sec</string>
-  <string name="callrecordview_item_op_time_rejected">Respins</string>
-  <string name="callrecordview_item_op_time_short_incoming">"Primit: "</string>
-  <string name="callrecordview_item_op_time_short_outgoing">"Trimis: "</string>
-  <string name="check_network">Setări rețea</string>
-  <string name="choose_upload">Selectați fișierul de încărcat</string>
-  <string name="colon">": "</string>
-  <string name="confirm_delete_all_call_log_title">Ștergeți istoricul apelurilor?</string>
-  <string name="confirm_delete_call_log_title">Ștergeți istoricul apelurilor?</string>
-  <string name="confirm_to_add_blacklist">Blocați acest număr?</string>
-  <string name="confirm_to_remove_blacklist">Deblocați acest număr?</string>
-  <string name="confirm_to_send_to_desktop">Plasați %s pe ecranul principal?</string>
-  <string name="contact_detail_calllog_call_note_tips">Call notes</string>
-  <string name="contact_detail_calllog_call_record_tips">Apeluri înregistrate</string>
-  <string name="content_desc_send_sms">Trimiteți SMS</string>
-  <string name="coupon_bought_count">%d cumpărate</string>
-  <string name="currency_character">RMB</string>
-  <string name="custom_mark_category">Personalizat</string>
-  <string name="data_error">A apărut o eroare</string>
-  <string name="data_error_show">A apărut o eroare</string>
-  <string name="delete">Ștergeți</string>
-  <string name="didi_back">Înapoi</string>
-  <string name="didi_close">Închideți</string>
-  <string name="do_not_remind_me">"Nu arăta din nou"</string>
-  <string name="dont_enable">Dezactivați</string>
-  <string name="download_completed">Descărcare salvată în %s</string>
-  <string name="download_failed">Descărcarea a eșuat</string>
-  <string name="download_failed_blocked">"Nu se poate conecta la rețea"</string>
-  <string name="download_failed_cannot_resume">"Nu se poate descărca"</string>
-  <string name="download_failed_file_exists">Fișierul există deja</string>
-  <string name="download_failed_gone">"Fișierul nu a fost găsit"</string>
-  <string name="download_failed_network">"Nu se poate conecta la rețea"</string>
-  <string name="download_failed_server">Descărcarea a eșuat</string>
-  <string name="download_failed_space">Spațiu insuficient</string>
-  <string name="download_failed_storage">Descărcarea a eșuat. Verificați cardul SD.</string>
-  <string name="downloading">Se descarcă…</string>
-  <string name="enable_now">Activați</string>
-  <string name="exapress_save_address_to_contact">Salvați această adresă în Contacte</string>
-  <string name="express_add_new_address">Adăugați adresa</string>
-  <string name="express_address_delete_warning">Eliminați această adresă?</string>
-  <string name="express_address_deleted">Adresă ștearsă</string>
-  <string name="express_address_info">Informații despre adresă</string>
-  <string name="express_address_name">Nume</string>
-  <string name="express_address_region">Regiune</string>
-  <string name="express_address_warning_no_area">Regiunea trebuie selectată</string>
-  <string name="express_address_warning_no_full_address">Adresa este necesară</string>
-  <string name="express_address_warning_no_name">Numele trebuie completat</string>
-  <string name="express_address_warning_no_phone">Numărul de telefon este necesar</string>
-  <string name="express_addressee_info">Informații adresă</string>
-  <string name="express_addressee_name">Numele adresei</string>
-  <string name="express_addressee_region">"Regiunea pentru adresă"</string>
-  <string name="express_banner_header">%1$s / Număr de urmărire</string>
-  <string name="express_cancel_order">Renunțați</string>
-  <string name="express_company_list_empty">Nicio companie</string>
-  <string name="express_company_phone_prefix">"Contact: "</string>
-  <string name="express_company_pricing_details">Detalii despre preț</string>
-  <string name="express_contact_address">Introduceți adresa</string>
-  <string name="express_contact_address_finding">Se localizează…</string>
-  <string name="express_contact_label">Informații pentru  for serviciul de ridicare colet</string>
-  <string name="express_contact_phone">Introduceți numărul de telefon</string>
-  <string name="express_contact_phone_finding">Se obține numărul de telefon…</string>
-  <string name="express_contact_prefix">"Contact "</string>
-  <string name="express_copied">Numărul de urmărire este copiat</string>
-  <string name="express_copy_number">Copiere</string>
-  <string name="express_delete_order">Ștergere</string>
-  <string name="express_dest_city_label">Destinație</string>
-  <string name="express_detailed_address">Adresă</string>
-  <string name="express_field_empty">Gol</string>
-  <string name="express_go_back">Înapoi</string>
-  <string name="express_info_divider">" / "</string>
-  <string name="express_inqiury_select_logistics">Serviciu de curierat</string>
-  <string name="express_inquiry">Urmărire</string>
-  <string name="express_inquiry_and_send">Urmărire și trimitere</string>
-  <string name="express_inquiry_button_text">Urmărește</string>
-  <string name="express_inquiry_clipboard_number_message">Urmăriți numărul copiat?</string>
-  <string name="express_inquiry_data_owner_prefix">"Serviciu de urmărire furnizat de "</string>
-  <string name="express_inquiry_data_owner_suffix"/>
-  <string name="express_inquiry_delete_warning_multiple">Ștergeți %d intrări?</string>
-  <string name="express_inquiry_delete_warning_single">Ștergeți această înregistrare?</string>
-  <string name="express_inquiry_delivered">Expediat</string>
-  <string name="express_inquiry_detail">Detalii livrare express</string>
-  <string name="express_inquiry_edit_logistics">Curier</string>
-  <string name="express_inquiry_history">Istoric</string>
-  <string name="express_inquiry_history_remark">Comentarii</string>
-  <string name="express_inquiry_history_remark_hint">Istoricul comentariilor</string>
-  <string name="express_inquiry_internal_failure">"A apărut o eroare.
->>>>>>> origin/master
->>>>>>> 36ccafc6410d8439b042200315f632951d31fd1a
 Verificați numărul de urmărire."</string>
     <string name="express_inquiry_logistics">Selectați un serviciu de curierat</string>
     <string name="express_inquiry_logistics_prefix">Serviciul de curierat: %s</string>
