--- a/Romanian/main/Weather.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Weather.apk/res/values-ro/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="act_find_city_hint">Introduceţi locaţia</string>
     <string name="act_find_city_hot_attractions_title">Locații populare</string>
@@ -21,7 +21,6 @@
     <string name="activity_main_time_format">E</string>
     <string name="activity_main_update_time">Actualizat %1$s</string>
     <string name="activity_main_update_time_expire">Date expirate</string>
-    <string name="activity_main_update_time_right_now">acum</string>
     <string name="activity_main_update_time_right_now">chiar acum</string>
     <string name="activity_weathermain_locationg">Localizare…</string>
     <string name="activity_weathermain_locationg_error">"Nu se poate localiza"</string>
@@ -46,57 +45,8 @@
     <string name="aqi_detail_sub_title">Detalii ICA</string>
     <string name="aqi_detail_subtitle">ICA %1$s</string>
     <string name="aqi_detail_title">Indicele de Calitate a Aerului</string>
-    <string name="aqi_detail_unit">Unitatea de măsură: µg/m3 (CO:mg/m3)</string>
     <string name="aqi_detail_unit">Unitatea de măsură: µg/m³ (CO: mg/m³)</string>
-  <string name="act_find_city_hint">Introduceţi locaţia</string>
-  <string name="act_find_city_hot_attractions_title">Locații populare</string>
-  <string name="act_find_city_hot_city_title">Orașe populare</string>
-  <string name="act_set_city_find_side">Localizare</string>
-  <string name="act_set_city_find_side_error">"Localizare eşuată"</string>
-  <string name="act_weather_find_city_added">Oraş adăugat</string>
-  <string name="act_weather_find_city_click_retry">Reîncercaţi</string>
-  <string name="act_weather_find_city_net_no_good">"Imposibil de conectat la reţea"</string>
-  <string name="act_weather_find_city_no_result">Niciun rezultat</string>
-  <string name="act_weather_find_city_searching">Căutare…</string>
-  <string name="activity_alert_detail_title"/>
-  <string name="activity_find_city_dialog_cancel">Anulaţi</string>
-  <string name="activity_find_city_dialog_message">Permiteţi utilizarea locaţiei dvs.</string>
-  <string name="activity_find_city_dialog_set">Setări</string>
-  <string name="activity_find_city_dialog_title">Acces la locaţie</string>
-  <string name="activity_main_alert"/>
-  <string name="activity_main_clickable">&gt;</string>
-  <string name="activity_main_one_alert"/>
-  <string name="activity_main_time_format">E</string>
-  <string name="activity_main_update_time">Actualizat %1$s</string>
-  <string name="activity_main_update_time_expire">Date expirate</string>
-  <string name="activity_main_update_time_right_now">acum</string>
-  <string name="activity_weathermain_locationg">Localizare…</string>
-  <string name="activity_weathermain_locationg_error">"Nu se poate localiza"</string>
-  <string name="add_city">Adăugaţi</string>
-  <string name="ads_extension"/>
-  <string name="ads_install_num"/>
-  <string name="ads_score_title"/>
-  <string name="alert_warning">Avertizări meteo</string>
-  <string name="already_voted">Votat</string>
-  <string name="already_voted_toast">"Ați votat deja astăzi"</string>
-  <string name="app_name">Meteo</string>
-  <string name="aqi_data_source">Oferit de Colorful Clouds</string>
-  <string name="aqi_desc">Indicele de Calitate a Aerului</string>
-  <string name="aqi_detail_24_hours">Prognoza pe 24 de ore</string>
-  <string name="aqi_detail_5_days">Prognoza pe 5 zile</string>
-  <string name="aqi_detail_co">CO</string>
-  <string name="aqi_detail_no2">NO₂</string>
-  <string name="aqi_detail_o3">O₃</string>
-  <string name="aqi_detail_pm10">PM10</string>
-  <string name="aqi_detail_pm25">PM2.5</string>
-  <string name="aqi_detail_so2">SO₂</string>
-  <string name="aqi_detail_sub_title">Detalii ICA</string>
-  <string name="aqi_detail_subtitle">ICA %1$s</string>
-  <string name="aqi_detail_title">Indicele de Calitate a Aerului</string>
-  <string name="aqi_detail_unit">Unitatea de măsură: µg/m3 (CO:mg/m3)</string>
->>>>>>> origin/master
->>>>>>> 36ccafc6410d8439b042200315f632951d31fd1a
-  <string name="aqi_display_exp">exp_%1$s</string>
+    <string name="aqi_display_exp">exp_%1$s</string>
     <string name="aqi_publish_source">Actualizat la %1$s de CNEMC</string>
     <string name="aqi_publish_time">Actualizat la %1$s</string>
     <string name="aqi_short_desc">ICA %1$s</string>
@@ -174,7 +124,6 @@ Glisați în jos pentru a actualiza sau verificați setările de rețea"</string
     <string name="indices_title_pressure">Presiune</string>
     <string name="indices_title_restriction">Restricții auto</string>
     <string name="indices_title_sport">Sport</string>
-    <string name="indices_title_uv">Index UV</string>
     <string name="indices_title_uv">Indice UV</string>
     <string name="indices_title_visibility">Vizibilitate</string>
     <string name="information_manager_default_weather_bg">Fundal implicit Meteo</string>
@@ -269,189 +218,8 @@ Apăsați pe ecran pentru a adăuga manual sau pentru a repoziționa orașul"</s
     <string name="traffic_control_daty_after_tomorrow_numbers">Poimâine: %1$s</string>
     <string name="traffic_control_today_numbers">Astăzi: %1$s</string>
     <string name="traffic_control_tomorrow_numbers">Mâine: %1$s</string>
-=======
-  <string name="data_provided_by">Date furnizate de</string>
-  <string name="edit_alert_city_title">Gestionați alertele</string>
-  <string name="edit_city">Gestionați locațiile</string>
-  <string name="empty">" "</string>
-  <string name="feedback_heavy_rain">Ploaie torențială</string>
-  <string name="feedback_heavy_snow">Ninsoare</string>
-  <string name="feedback_light_rain">Ploaie ușoară</string>
-  <string name="feedback_overcast">Înnorat</string>
-  <string name="feedback_result_fail_no_choice">Vă rugăm selectați tipul de vreme pe care îl resimțiți</string>
-  <string name="feedback_result_interval_time_too_short">%1$s secunde după feedback</string>
-  <string name="feedback_result_success">Trimis cu succes. Vă mulțumim pentru feedback</string>
-  <string name="feedback_sand">Furtună de nisip</string>
-  <string name="feedback_sunny">Însorit</string>
-  <string name="first_start_network_msg">Această aplicație trebuie să se conecteze la internet și să acceseze locația dvs. pentru a funcţiona in mod normal.</string>
-  <string name="first_start_network_title">Conexiune la internet și acces la locație</string>
-  <string name="global_aqi">ICA: %1$s %2$s</string>
-  <string name="gps_hint">Locaţie actuală</string>
-  <string name="hour_minute_time_format">HH:mm</string>
-  <string name="hourly_forcast_now">Acum</string>
-  <string name="hourly_forecast_bottom_aqi_chinese">%1$s %2$s</string>
-  <string name="hourly_forecast_bottom_aqi_else">%1$s</string>
-  <string name="hourly_forecast_date">d/M</string>
-  <string name="hourly_forecast_title">Prognoză orară</string>
-  <string name="index_item_experience_now">Instalați acum</string>
-  <string name="index_item_install_dialog"/>
-  <string name="index_item_install_dialog_cancel"/>
-  <string name="index_item_install_dialog_open"/>
-  <string name="index_item_install_now">Instalați acum</string>
-  <string name="index_item_installing">Se instalează</string>
-  <string name="indices_desc_Precip1hr">%1$s mm</string>
-  <string name="indices_desc_feel">Se simte ca la %1$s °C</string>
-  <string name="indices_desc_feel_without_pic">%1$s°C</string>
-  <string name="indices_desc_humidity">Umiditate %1$s%%</string>
-  <string name="indices_desc_humidity_without_pic">%1$s%%</string>
-  <string name="indices_desc_pressure">%1$s mb</string>
-  <string name="indices_desc_visibility">%1$s km</string>
-  <string name="indices_no_restriction">Nicio restricție</string>
-  <string name="indices_title">Activități recomandate</string>
-  <string name="indices_title_Precip1hr">Precip. 1 oră</string>
-  <string name="indices_title_car_wash">Spălat mașina</string>
-  <string name="indices_title_feel">Temperatură resimțită</string>
-  <string name="indices_title_humidity">Umiditate</string>
-  <string name="indices_title_pressure">Presiune</string>
-  <string name="indices_title_restriction">Restricții auto</string>
-  <string name="indices_title_sport">Sport</string>
-  <string name="indices_title_uv">Index UV</string>
-  <string name="indices_title_visibility">Vizibilitate</string>
-  <string name="information_manager_default_weather_bg">Fundal implicit Meteo</string>
-  <string name="information_manager_extension">Extensie meteo</string>
-  <string name="information_manager_information">Informații despre vreme</string>
-  <string name="information_manager_wlan">Actualizați în Wi-Fi</string>
-  <string name="information_menu_title"/>
-  <string name="information_set">Alte setări</string>
-  <string name="information_time_source">%1$s | %2$s</string>
-  <string name="information_views"/>
-  <string name="install">Instalați</string>
-  <string name="install_progress">%1$s%%</string>
-  <string name="international_detail_menu_title">Detalii</string>
-  <string name="international_details_pressure_title">PRESIUNE</string>
-  <string name="international_details_real_feel_title">TEMPERATURA RESIMȚITĂ®</string>
-  <string name="international_details_title">Detalii</string>
-  <string name="international_details_uv_index_title">INDICE UV</string>
-  <string name="international_details_wind_connect">%1$s %2$s</string>
-  <string name="international_details_wind_title">VÂNT</string>
-  <string name="locate_fail_detail_err">"Nu se poate obține locația.
->>>>>>> 36ccafc6410d8439b042200315f632951d31fd1a
 Apăsați pe ecran pentru a adăuga manual sau pentru a repoziționa orașul"</string>
-    <string name="location_tag">Localizare GPS</string>
-    <string name="lunar_calendar"/>
-    <string name="menu_add_city">Editați locațiile</string>
-    <string name="menu_location">Locaţii</string>
-    <string name="menu_minute_rain">Prognoza de precipitații pentru două ore</string>
-    <string name="menu_speeker">Suport vocal</string>
-    <string name="mi_pad2">latte</string>
-    <string name="minute_rain_after_an_hour">Cu o oră mai târziu</string>
-    <string name="minute_rain_after_two_hour">Cu două ore mai târziu</string>
-    <string name="minute_rain_feedback_subtitle">Spune-mi doar ce vreme este</string>
-    <string name="minute_rain_feedback_text">Feedback</string>
-    <string name="minute_rain_feedback_title">"Starea vremii nu pare a fi corectă.."</string>
-    <string name="minute_rain_let_go_refresh">Reîmprospătați</string>
-    <string name="minute_rain_no_data">Nicio dată</string>
-    <string name="minute_rain_now">Acum</string>
-    <string name="minute_rain_progress_indicator_original_time">- -</string>
-    <string name="minute_rain_pull_down_refresh">Glisați în jos pentru a reîmprospăta</string>
-    <string name="minute_rain_refreshing_now">Reîmprospătare</string>
-    <string name="more_details">Mai multe detalii</string>
-    <string name="network_not_available">"Nu se poate conecta la rețea"</string>
-    <string name="network_unavailable">"Nu se poate conecta la rețea."</string>
-    <string name="no_data">--</string>
-    <string name="no_network_btn">Reîncercați</string>
-    <string name="no_vote_ratio">Contra %1$s%%</string>
-    <string name="open">Deschideți</string>
-    <string name="open_browser">Deschideți în browser</string>
-    <string name="open_now">Deschideți</string>
-    <string name="other">Altele</string>
-    <string name="precipitation_degree_five">furtună</string>
-    <string name="precipitation_degree_four">torențială</string>
-    <string name="precipitation_degree_one">nu plouă</string>
-    <string name="precipitation_degree_three">moderată</string>
-    <string name="precipitation_degree_two">ușoară</string>
-    <string name="pressure_connect">%1$s mb</string>
-  <string name="radar_cloud_image_title">Radar Map</string>
-    <string name="realtime_aqi_title">Indice de Calitate a Aerului</string>
-    <string name="realtime_humidity_title">Umiditatea relativă</string>
-    <string name="realtime_temperature_no_data">N/A</string>
-    <string name="realtime_wind_default_title">Vânt</string>
-    <string name="refresh_fail">"Nu s-a putut conecta la rețea"</string>
-    <string name="retry">Încercați din nou</string>
-    <string name="search_weather">Meteo</string>
-    <string name="search_weather_keywords">Temperatură;Prognoză meteo;Meteo;Calitatea aerului;Grad de poluare;Umiditate</string>
-    <string name="set">Setări</string>
-    <string name="set_degree_centigrade">°C</string>
-    <string name="set_fahrenheit">°F</string>
-    <string name="set_kilometre">km/h</string>
-    <string name="set_land_mile">mph</string>
-    <string name="share">Partajați</string>
-    <string name="share_btn_cancel">Anulaţi</string>
-    <string name="share_btn_confirm">Distribuiţi</string>
-    <string name="share_button">Distribuiţi prin</string>
-    <string name="share_menu_title">Distribuiți</string>
-    <string name="share_subject">Distribuiţi prin</string>
-    <string name="share_title">Distribuire stare vreme</string>
-    <string name="share_weather_desc">\#Meteo MIUI# Astăzi %1$s %2$s</string>
-    <string name="share_weather_desc_alert">%1$s%2$s</string>
-    <string name="share_weather_desc_split">,</string>
-    <string name="share_weather_save_pic_fail">"Nu s-a putut efectua captura de ecran"</string>
-    <string name="some_where_on_earth">Undeva pe Pământ</string>
-    <string name="sunrise">Răsărit</string>
-    <string name="sunset">Apus</string>
-    <string name="temperature_unit">%1$s°C</string>
-    <string name="title_share_link">Partajați linkul</string>
-    <string name="top_pollution_co">CO</string>
-    <string name="top_pollution_no2">NO2</string>
-    <string name="top_pollution_o3">O3</string>
-    <string name="top_pollution_pm10">PM10</string>
-    <string name="top_pollution_pm25">PM2.5</string>
-    <string name="top_pollution_so2">SO2</string>
-    <string name="traffic_control_daty_after_tomorrow_numbers">Poimâine: %1$s</string>
-    <string name="traffic_control_today_numbers">Astăzi: %1$s</string>
-    <string name="traffic_control_tomorrow_numbers">Mâine: %1$s</string>
-=======
-  <string name="realtime_aqi_title">Indice de Calitate a Aerului</string>
-  <string name="realtime_humidity_title">Umiditatea relativă</string>
-  <string name="realtime_temperature_no_data">N/A</string>
-  <string name="realtime_wind_default_title">Vânt</string>
-  <string name="refresh_fail">"Nu s-a putut conecta la rețea"</string>
-  <string name="retry">Încercați din nou</string>
-  <string name="search_weather">Meteo</string>
-  <string name="search_weather_keywords">Temperatură;Prognoză meteo;Meteo;Calitatea aerului;Grad de poluare;Umiditate</string>
-  <string name="set">Setări</string>
-  <string name="set_degree_centigrade">°C</string>
-  <string name="set_fahrenheit">°F</string>
-  <string name="set_kilometre">km/h</string>
-  <string name="set_land_mile">mph</string>
-  <string name="share">Partajați</string>
-  <string name="share_btn_cancel">Anulaţi</string>
-  <string name="share_btn_confirm">Distribuiţi</string>
-  <string name="share_button">Distribuiţi prin</string>
-  <string name="share_menu_title">Distribuiți</string>
-  <string name="share_subject">Distribuiţi prin</string>
-  <string name="share_title">Distribuire stare vreme</string>
-  <string name="share_weather_desc">\#Meteo MIUI# Astăzi %1$s %2$s</string>
-  <string name="share_weather_desc_alert">%1$s%2$s</string>
-  <string name="share_weather_desc_split">,</string>
-  <string name="share_weather_save_pic_fail">"Nu s-a putut efectua captura de ecran"</string>
-  <string name="some_where_on_earth">Undeva pe Pământ</string>
-  <string name="sunrise">Răsărit</string>
-  <string name="sunset">Apus</string>
-  <string name="temperature_unit">%1$s°C</string>
-  <string name="title_share_link">Partajați linkul</string>
-  <string name="top_pollution_co">CO</string>
-  <string name="top_pollution_no2">NO2</string>
-  <string name="top_pollution_o3">O3</string>
-  <string name="top_pollution_pm10">PM10</string>
-  <string name="top_pollution_pm25">PM2.5</string>
-  <string name="top_pollution_so2">SO2</string>
-  <string name="traffic_control_daty_after_tomorrow_numbers">Poimâine: %1$s</string>
-  <string name="traffic_control_today_numbers">Astăzi: %1$s</string>
-  <string name="traffic_control_tomorrow_numbers">Mâine: %1$s</string>
->>>>>>> origin/master
->>>>>>> 36ccafc6410d8439b042200315f632951d31fd1a
-  <string name="traffic_controls">Restricții de trafic</string>
+    <string name="traffic_controls">Restricții de trafic</string>
     <string name="tts_report_aqi"/>
     <string name="tts_report_city_name"/>
     <string name="tts_report_defautl_head"/>
