--- a/Romanian/main/XiaomiAccount.apk/res/values-ro/strings.xml
+++ b/Romanian/main/XiaomiAccount.apk/res/values-ro/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="about_device_info">Vizualizați detaliile dispozitivului</string>
     <string name="access_token_expired_warning">Contul Weibo a expirat</string>
@@ -97,8 +97,6 @@
     <string name="delete_browser">Eliminați browser-ul</string>
     <string name="delete_device">Eliminați dispozitivul</string>
     <string name="delete_device_btn">Eliminaţi</string>
-    <string name="delete_device_failed">Nu se poate elimina dispozitivul</string>
-    <string name="delete_device_notice">După ce dispozitivul este eliminat, va fi deconectat din contul dvs. Mi în mod automat. Nu veţi putea utiliza acest dispozitiv pentru a accesa fotografiile, mesajele sau alt conținut stocat în contul dvs.</string>
     <string name="delete_device_failed">"Nu s-a putut elimina dispozitivul"</string>
     <string name="delete_device_notice">"După ce dispozitivul este eliminat, va fi deconectat din contul dvs. Mi în mod automat. Nu veţi putea utiliza acest dispozitiv pentru a accesa fotografiile, mesajele sau alt conținut stocat în contul dvs."</string>
     <string name="delete_lock_device_success">Eliminat cu succes</string>
@@ -133,7 +131,6 @@
     <string name="find_device_request_prepare_error">"Nu s-a putut obține starea; încercați din nou mai târziu"</string>
     <string name="find_device_unknown_error">"Nu s-a putut obține starea dispozitivului; așteptați un minut sau două și reîncercați"</string>
     <string name="first_login_time">Prima tentativă de conectare: %s</string>
-    <string name="get_device_list_failed">Nu se poate obține lista dispozitivelor</string>
     <string name="get_device_list_failed">"Nu se poate obține lista dispozitivelor"</string>
     <string name="get_phone_verifycode_exceed_limit">Prea multe coduri de verificare au fost trimise la acest număr. Așteptați 24 de ore și încercați din nou.</string>
     <string name="guest_account_label">Cont gazdă Mi</string>
@@ -195,186 +192,6 @@
     <string name="passport_checking_account">Verificare parolă…</string>
     <string name="passport_checking_input">Verificare…</string>
     <string name="passport_click_email_to_valid">"
-  <string name="about_device_info">Vizualizați detaliile dispozitivului</string>
-  <string name="access_token_expired_warning">Contul Weibo a expirat</string>
-  <string name="access_token_invalid_warning">Contul Weibo nu este valid</string>
-  <string name="account">Cont</string>
-  <string name="account_bind_devices">Dispozitive</string>
-  <string name="account_bind_new_phone">Adăugaţi un telefon nou</string>
-  <string name="account_bind_phone_notice">Utilizați acest număr de telefon pentru a vă conecta la contul dvs., pentru a reseta parola sau pentru a modifica setările de securitate.</string>
-  <string name="account_bind_secure_email_title">Adăugaţi un e-mail</string>
-  <string name="account_bind_secure_phone_title">Adăugaţi un număr de telefon</string>
-  <string name="account_bind_settings">Conturi</string>
-  <string name="account_binded_phone">Telefon %d</string>
-  <string name="account_crop_user_avatar">Decupaţi fotografia</string>
-  <string name="account_empty_user_name">Introduceți numele de utilizator al contului Mi</string>
-  <string name="account_error_all_space_user_name">"Numele nu poate conține numai spații goale"</string>
-  <string name="account_error_invalid_user_name">"Numele nu poate conține &lt;, &gt;, /"</string>
-  <string name="account_error_longer_user_name">Numele nu poate depăși 20 de caractere</string>
-  <string name="account_error_shorter_user_name">Numele trebuie să conţină mai mult de 2 caractere</string>
-  <string name="account_error_user_birthday">Ziua de naștere introdusă nu este validă</string>
-  <string name="account_has_been_set">Modificați</string>
-  <string name="account_limit_update_birthday">"Nu se poate actualiza ziua de naștere acum"</string>
-  <string name="account_mipay_info">Plăți Mi</string>
-  <string name="account_no_set">Nimic</string>
-  <string name="account_none">Nimic</string>
-  <string name="account_none_binded_info">Niciunul</string>
-  <string name="account_none_user_name">Nimic</string>
-  <string name="account_protection">Protecție cont</string>
-  <string name="account_protection_off">Dezactivată</string>
-  <string name="account_protection_on">Activată</string>
-  <string name="account_secure_info_pref_title">Informații cont</string>
-  <string name="account_security">Securitate cont</string>
-  <string name="account_security_info_pref_title">Informații despre securitate</string>
-  <string name="account_user_avatar">Fotografie de profil</string>
-  <string name="account_user_avatar_from_album">Selectaţi o fotografie</string>
-  <string name="account_user_avatar_from_camera">Faceţi o fotografie</string>
-  <string name="account_user_base_info">Informaţii personale</string>
-  <string name="account_user_birthday">Zi de naştere</string>
-  <string name="account_user_details">Informaţii personale</string>
-  <string name="account_user_education">Nivel de educație</string>
-  <string name="account_user_email">E-mail</string>
-  <string name="account_user_gender">Sex</string>
-  <string name="account_user_id">ID cont Mi</string>
-  <string name="account_user_income">Venit lunar</string>
-  <string name="account_user_info">Informații utilizator</string>
-  <string name="account_user_location">Locație</string>
-  <string name="account_user_location_title">Selectați locația curentă</string>
-  <string name="account_user_name">Nume</string>
-  <string name="account_user_name_dialog_title">Introduceţi numele de utilizator</string>
-  <string name="account_user_other_info">Informații suplimentare</string>
-  <string name="account_user_phone">Număr de telefon</string>
-  <string name="account_user_recovery_phone">Telefon pentru recuperare</string>
-  <string name="account_user_region">Regiune</string>
-  <string name="account_user_using_facebook_avatar">Utilizați fotografia profilului Facebook</string>
-  <string name="account_user_using_qq_avatar">Utilizați fotografia de profil QQ</string>
-  <string name="account_user_using_weibo_avatar">Utilizați fotografia de profil Sina Weibo</string>
-  <string name="account_xiaomi_service">Servicii</string>
-  <string name="activate_email_notice">Activați contul în cel mult 24 de ore!</string>
-  <string name="activity_not_found_notice">"Nu s-a putut găsi aplicația"</string>
-  <string name="add_account">Adăugaţi un cont</string>
-  <string name="app_name">Cont Mi</string>
-  <string name="auth_fail_warning">Sesiunea a expirat, conectați-vă din nou mai târziu</string>
-  <string name="authorize_title">Autorizare</string>
-  <string name="bind_facebook">Adăugaţi contul dvs. Facebook</string>
-  <string name="bind_qq">QQ</string>
-  <string name="bind_settings">Conturi</string>
-  <string name="bind_sina_weibo">Adăugaţi un cont Sina Weibo</string>
-  <string name="bind_sns_description">Conectaţi-vă cu %s</string>
-  <string name="bind_weibo_description">Găsiţi şi sincronizați prietenii din Sina Weibo</string>
-  <string name="binded">Adăugat</string>
-  <string name="binded_description" formatted="false">%s a fost adăugat la contul dvs. Mi. Profilul dvs. a fost actualizat cu informaţiile din contul %s.</string>
-  <string name="button_unbind">Eliminaţi</string>
-  <string name="change_activate_email">Schimbaţi adresa de e-mail pentru activare</string>
-  <string name="change_email_address">Schimbaţi adresa de e-mail</string>
-  <string name="change_password">Schimbați parola</string>
-  <string name="change_phone_number">Schimbaţi numărul de telefon</string>
-  <string name="checking_phone_num_availible">Verificare telefon…</string>
-  <string name="cloud_service">Mi Cloud</string>
-  <string name="completed">Finalizat</string>
-  <string name="confirm_activate_email">Verificată</string>
-  <string name="confirm_delete_app_message">"După ce veți elimina această aplicație, va trebui să vă verificați numărul de telefon când vă veți conecta din nou la contul Mi din aplicație."</string>
-  <string name="confirm_delete_browser_message">"După ce veți elimina acest browser, va trebui să vă verificați numărul de telefon când vă veți conecta din nou la contul Mi cu ajutorul său."</string>
-  <string name="confirm_delete_device_message">"După ce veți elimina acest dispozitiv, va trebui să vă verificați numărul de telefon când vă veți conecta din nou la contul Mi de pe el."</string>
-  <string name="confirm_phone_number_dialog_message">Codul de verificare va fi trimis la: %s.</string>
-  <string name="confirm_phone_number_dialog_title">Confirmaţi numărul de telefon</string>
-  <string name="confirm_unbind">Eliminați acest cont?</string>
-  <string name="continue_action">Continuaţi</string>
-  <string name="cta_declaration_agree_and_continue">De acord</string>
-  <string name="cta_declaration_exit">Ieșire</string>
-  <string name="cta_declaration_message">"Pentru a vă conecta la contul Mi, trebuie să vă conectați la internet.Serviciile de localizare și sincronizarea cu Mi Cloud vor fi pornite. Pentru a realiza o copie de siguranță a datelor personale, această aplicație trebuie să aibă acces la agenda, SMS-urile și MMS-urile, istoricul apelurilor și la înregistrările dvs. Nu vom folosi aceste date în scop comercial și nici nu le vom partaja nimănui. După logarea în contul Mi, Mi VIP și serviciile Mi se vor conecta la internet."</string>
-  <string name="cta_declaration_title">Termeni și Condiții</string>
-  <string name="current_location_title">Locația curentă</string>
-  <string name="delete_action">Ştergeţi</string>
-  <string name="delete_app">Ștergeți aplicația</string>
-  <string name="delete_bank_card_message">Din motive de securitate, vom șterge datele cardului bancar după ce vă veți deconecta</string>
-  <string name="delete_bank_card_title">Ștergerea datelor cardului bancar</string>
-  <string name="delete_browser">Eliminați browser-ul</string>
-  <string name="delete_device">Eliminați dispozitivul</string>
-  <string name="delete_device_btn">Eliminaţi</string>
-  <string name="delete_device_failed">Nu se poate elimina dispozitivul</string>
-  <string name="delete_device_notice">După ce dispozitivul este eliminat, va fi deconectat din contul dvs. Mi în mod automat. Nu veţi putea utiliza acest dispozitiv pentru a accesa fotografiile, mesajele sau alt conținut stocat în contul dvs.</string>
-  <string name="delete_lock_device_success">Eliminat cu succes</string>
-  <string name="device_delete_success_message">Dacă nu v-ați conectat de pe acest dispozitiv, schimbaţi parola imediat.</string>
-  <string name="device_delete_success_title">Deconectat</string>
-  <string name="device_list__header">Dispozitivele mele</string>
-  <string name="device_list_title">Lista de dispozitive</string>
-  <string name="device_name">Numele dispozitivului</string>
-  <string name="device_trust_info">Dispozitiv de încredere</string>
-  <string name="empty_device_list_notice">Niciun dispozitiv</string>
-  <string name="error_dup_binded_email">Această adresă de e-mail este deja asociată cu un alt cont Mi.</string>
-  <string name="error_invalid_bind_address">Adresa de e-mail introdusă este incorectă.</string>
-  <string name="exceed_binded_phone_times_notice">Acest număr de telefon este asociat deja cu un alt cont Mi.</string>
-  <string name="facebook">Facebook</string>
-  <string name="failed_dup_secure_phone_number">Acest număr de telefon este deja asociat cu un alt cont Mi.</string>
-  <string name="find_device_access_denied">"Nu s-a putut verifica starea; nu este permis accesul"</string>
-  <string name="find_device_account_error">"Nu s-a putut obține starea datorită unei erori de cont"</string>
-  <string name="find_device_activate_account">Activați contul</string>
-  <string name="find_device_bad_response_error">A apărut o eroare de server; așteptați un minut sau două și încercați din nou</string>
-  <string name="find_device_display_id">Cod de deblocare: %s</string>
-  <string name="find_device_error_password_not_confirmed">"Nu s-a putut dezactiva Localizarea dispozitivului. Introduceți parola contului Mi din nou."</string>
-  <string name="find_device_error_password_recently_changed">"Ați modificat parola în ultimele 3 zile. Nu se poate dezactiva acum Localizarea dispozitivului din motive de siguranță."</string>
-  <string name="find_device_interrupted">Acțiunea a fost întreruptă; așteptați un minut sau două și încercați din nou</string>
-  <string name="find_device_io_error">"Nu se poate conecta la rețea"</string>
-  <string name="find_device_locked_account_email" formatted="false">%s, adresa de e-mail asociată: %s</string>
-  <string name="find_device_locked_account_phone" formatted="false">%s, numărul de telefon asociat: %s</string>
-  <string name="find_device_null_credential_error">"Nu se pot obține informațiile despre dispozitiv; contactați Serviciul Clienți Xiaomi"</string>
-  <string name="find_device_operation_failed_error">A apărut o eroare de server; așteptați un minut sau două și reîncercați</string>
-  <string name="find_device_operation_failed_error_unknown">A apărut o eroare; încercați din nou mai târziu</string>
-  <string name="find_device_remote_exception">Eroare RPC</string>
-  <string name="find_device_request_error">A apărut o eroare de server; așteptați un minut sau două și reîncercați</string>
-  <string name="find_device_request_prepare_error">"Nu s-a putut obține starea; încercați din nou mai târziu"</string>
-  <string name="find_device_unknown_error">"Nu s-a putut obține starea dispozitivului; așteptați un minut sau două și reîncercați"</string>
-  <string name="first_login_time">Prima tentativă de conectare: %s</string>
-  <string name="get_device_list_failed">Nu se poate obține lista dispozitivelor</string>
-  <string name="get_phone_verifycode_exceed_limit">Prea multe coduri de verificare au fost trimise la acest număr. Așteptați 24 de ore și încercați din nou.</string>
-  <string name="guest_account_label">Cont gazdă Mi</string>
-  <string name="input_email_address_notice">"Vom folosi această adresă de e-mail pentru verificarea contului"</string>
-  <string name="io_error_title">Confirmați rețeaua personală</string>
-  <string name="just_a_second">Doar o secundă…</string>
-  <string name="loading_micloud_sync_data">Doar o secundă…</string>
-  <string name="local_device">(acest telefon)</string>
-  <string name="locating_current_location">Se determină localizarea</string>
-  <string name="location_service_not_working">Serviciul de localizare nu funcționează</string>
-  <string name="login_check_find_device">Se obțin informațiile despre securitatea dispozitivului…</string>
-  <string name="login_check_find_device_failed_title">"Nu s-au putut verifica informațiile despre securitatea telefonului"</string>
-  <string name="login_find_device_bind">Acest telefon este asociat unui cont Mi existent (%s).</string>
-  <string name="login_guard_prompt">Solicitare verificare număr de telefon la prima conectare la contul Mi de pe un dispozitiv necunoscut sau dintr-o aplicație necunoscută.</string>
-  <string name="logout_account">Deconectare</string>
-  <string name="logout_failed">Nu se poate deconecta</string>
-  <string name="mi_account_identity_title">Verificaţi identitatea dvs.</string>
-  <string name="mipay">Plăți</string>
-  <string name="mipay_balance">Balanță</string>
-  <string name="mipay_bank_card">Card bancar</string>
-  <string name="mipay_identity">Verificare ID</string>
-  <string name="mipay_others">Altele</string>
-  <string name="mipay_transit_card">Cartele de transport</string>
-  <string name="multi_user_not_show_sync_activity_message_1">"Se pare că utilizați contul Mi din spațiul principal."</string>
-  <string name="multi_user_not_show_sync_activity_message_2">"În acest caz, toate datele vor fi sincronizate cu cele din spațiul secundar. Pentru a evita acest lucru, nu activați sincronizarea cu Mi Cloud"</string>
-  <string name="multi_user_not_show_sync_activity_title">"Nu activați sincronizarea cu Mi Cloud"</string>
-  <string name="my_device_title">Dispozitiv actual</string>
-  <string name="no_network_btn">Reîmprospătaţi</string>
-  <string name="no_network_title">Nu se poate conecta la rețea.</string>
-  <string name="no_response_retry">Niciun răspuns, reîncercaţi.</string>
-  <string name="no_sim_card_or_unactivated">"Lipsește cartela SIM sau aceasta nu este activată"</string>
-  <string name="nobind">Neconectat</string>
-  <string name="notify_network_restricted_content_bg_network">"Conectarea la internet pentru Contul Mi este restricționată. Atingeți pentru a permite conectarea."</string>
-  <string name="notify_network_restricted_content_hidden_state">"Rularea în fundal pentru Contul Mi este restricționată. Atingeți pentru a permite."</string>
-  <string name="notify_network_restricted_content_mobile_network">"Conectarea la internet pentru Contul Mi este restricționată. Atingeți pentru a permite conectarea."</string>
-  <string name="notify_network_restricted_title">"Aplicația Cont Mi nu s-a putut conecta la rețea"</string>
-  <string name="oauth_get_scopes_failed">"Nu s-au putut obține informațiile contului"</string>
-  <string name="oauth_getting_scopes">Verificare cont…</string>
-  <string name="oauth_scopes_intro">&lt;font color=#%1$s&gt;%2$s&lt;/font&gt; va obține următoarele permisiuni:&lt;br&gt; &lt;br&gt; %3$s</string>
-  <string name="oauth_title">Conectați-vă utilizând contul Mi</string>
-  <string name="other_devices_title">Alte dispozitive</string>
-  <string name="passport_access_denied">Acces refuzat</string>
-  <string name="passport_account_hint_text">Adresă de e-mail sau ID cont Mi</string>
-  <string name="passport_account_identity_title">Verificaţi identitatea dvs.</string>
-  <string name="passport_account_label">Cont Mi</string>
-  <string name="passport_account_name">Cont: %1$s</string>
-  <string name="passport_account_not_activated">Contul nu a fost activat</string>
-  <string name="passport_account_not_actived">Contul dvs. nu a fost activat</string>
-  <string name="passport_active_email_visit">Verificaţi e-mailul primit la %s</string>
   <string name="passport_activing_account">Activare…</string>
   <string name="passport_area_code_hot">UTILIZAT FRECVENT</string>
   <string name="passport_area_code_title">Codul ţării</string>
@@ -387,8 +204,6 @@
   <string name="passport_checking_account">Verificare parolă…</string>
   <string name="passport_checking_input">Verificare…</string>
   <string name="passport_click_email_to_valid">"
->>>>>>> origin/master
->>>>>>> 36ccafc6410d8439b042200315f632951d31fd1a
     
 Pentru a vă activa contul, accesați
 link-ul din e-mailul pe care vi l-am trimis."</string>
